# hardcaml_xilinx

./: CHANGES.md  README.md  hardcaml_xilinx.opam
src/: address_collision.ml  address_collision.mli  byte_write_width.ml  byte_write_width.mli  cascade_height.ml  cascade_height.mli  clocking_mode.ml  clocking_mode.mli  collision_mode.ml  collision_mode.mli  dual_port_ram.ml  dual_port_ram.mli  dune  fifo_async.ml  fifo_async.mli  fifo_memory_type.ml  fifo_memory_type.mli  fifo_sync.ml  fifo_sync.mli  hardcaml_xilinx.ml  icape3.ml  icape3.mli  memory_builder.ml  memory_builder.mli  ram_arch.ml  ram_arch.mli  ram_port.ml  ram_port.mli  ram_port_with_clear.ml  ram_port_with_clear.mli  ram_with_resizing.ml  ram_with_resizing.mli  ram_with_resizing_intf.ml  safer_uram_collision_inference.ml  safer_uram_collision_inference.mli  simple_dual_port_ram.ml  simple_dual_port_ram.mli  synthesis.ml  synthesis.mli  synthesis_intf.ml  (+15 more)
test/: dune  hardcaml_xilinx_test.ml  import.ml  quickcheck_bits.ml  quickcheck_bits.mli  test_address_collition_model.ml  test_behaviour.ml  test_collision.ml  test_collision.mli  test_dual_port_ram.ml  test_fifo_async.ml  test_fifo_sync.ml  test_memory_builder_1d.ml  test_memory_builder_2d.ml  test_ram_clear_to.ml  test_ram_with_resizing.ml  test_ram_with_resizing.mli  test_simple_dual_port_ram.ml  test_synthesis.ml
test_hdl/: compile.do  dune  test_ram_with_resizing.v  test_resizing.sh  test_xram.sv  test_xram_collision.sh
