opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_xilinx"
bug-reports: "https://github.com/janestreet/hardcaml_xilinx/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_xilinx.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_xilinx/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "hardcaml"
  "hardcaml_circuits"
  "n_ary"
  "ppx_hardcaml"
  "ppx_jane"
  "dune"              {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml wrappers for Xilinx memory primitives"
description: "
The Hardcaml_xilinx library provides wrappers for Xilinx specific RAM and FIFO primitive
blocks. In many cases a simulation model is provided.

The `Synthesis` module implements various arithmetic and logical RTL components with
Xilinx LUT primitives.
"
