(rule (targets xram.v) (deps (:first_dep ../bin/xsim_modelling.exe))
 (action (bash "%{first_dep} tdpram > xram.v")))

(rule (targets resizing.v) (deps (:first_dep ../bin/xsim_modelling.exe))
 (action (bash "%{first_dep} resizing -seed 1234 > resizing.v")))

(alias (name fpga-runtest) (deps xram.v resizing.v))